--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/maitey-icon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Venice Image Chat</title>
+    <title>Maitey Image Chat</title>
+    <meta name="description" content="Generate beautiful images with Maitey Image Chat using AI" />
+    <meta name="theme-color" content="#8B5CF6" />
   </head>
   <body>
     <div id="root"></div>
